servicemesh/99_tls-north-south - multi/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
      - "*.kubermatic.training"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: backend.training.svc.cluster.local
            port:
                number: 8080
