servicemesh/99_tls-north-south - multi/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: frontend
spec:
  hosts:
      - "*.kubermatic.training"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: frontend.training.svc.cluster.local
            port:
                number: 8080
